# CompressAI-Vision

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NEWS.md  README.MD  README.md  README_sam_m73152.md  cli_usage.html  datasets.html  docker.html  faq.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.py  walkthrough.html
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md
.github/workflows/: static-analysis.yml  static-gh-pages.yml  static-test-install-cpu.yml  static-test-install.yml  static-test-install_uv.yml  test-pip.yml  tests.yml
_downloads/1dc4a9a58f6c009d13e7af048b3f5d69/: evaluate_nb.ipynb
_downloads/87247d9d68ae494803676c59e8b9c0db/: convert_nb.ipynb
_downloads/f213d87de9fc87e388e6b12ce5226002/: download_nb.ipynb
_modules/: index.html
_sources/: cli_usage.rst  datasets.rst  datasets.rst.txt  docker.rst.txt  faq.rst.txt  index.rst  index.rst.txt  installation.rst  installation.rst.txt  walkthrough.rst
_sources/compressai_vision/: codecs.rst  model_wrappers.rst  registry.rst
_sources/conversion/: index.rst  index.rst.txt
_sources/evaluation/: index.rst.txt
_sources/tutorials/: cli_tutorial_1_nb.rst.txt  cli_tutorial_2_nb.rst.txt  cli_tutorial_3_nb.rst  cli_tutorial_3_nb.rst.txt  cli_tutorial_4.rst.txt  cli_tutorial_4_nb.rst.txt  cli_tutorial_5_nb.rst.txt  cli_tutorial_7.rst  cli_tutorial_7_nb.rst  cli_tutorial_7_nb.rst.txt  convert.rst.txt  convert_nb.rst  convert_nb.rst.txt  detectron2_nb.rst.txt  encdec.rst.txt  evaluate.rst  evaluate.rst.txt  evaluate_nb.rst  evaluate_nb.rst.txt  fiftyone_nb.rst.txt  index.rst
_static/: basic.css
bash/: README.md  install.sh  install_1.bash  install_1_cu111.bash  vtm_test.bash
cfgs/: eval_cfp_codec.yaml  eval_cfp_codec_all_intra.yaml  eval_cfp_codec_lowdelay_P.yaml  eval_example.yaml  eval_example_anchors.yaml  eval_example_vtm.yaml  eval_fctm.yaml  eval_ffmpeg.yaml  eval_hm.yaml  eval_multitask_inference_example.yaml  eval_remote_inference_example.yaml  eval_split_inference_std_codec.yaml  eval_vtm.yaml  eval_vvenc.yaml  generate_features.yaml
cfgs/codec/: cfp_codec.yaml  default.yaml  fctm.yaml  ffmpeg.yaml  hm.yaml  jm.yaml  sic_sfu2022.yaml  vcmrs.yaml  vtm.yaml  vvenc.yaml
cfgs/dataset/: default.yaml
cfgs/env/: default.yaml
cfgs/evaluator/: default.yaml
cfgs/misc/: default.yaml
cfgs/paths/: default.yaml
cfgs/pipeline/: multitask_inference.yaml  remote_inference.yaml  single_input_multiple_task.yaml  split_inference.yaml
cfgs/vision_model/: default.yaml  faster_rcnn_R_50_FPN_3x.yaml  faster_rcnn_X_101_32x8d_FPN_3x.yaml  mask_rcnn_R_50_FPN_3x.yaml  mask_rcnn_X_101_32x8d_FPN_3x.yaml
codec/: index.html
compressai_vision/: __init__.py  codecs.html  constant.py  datasets.html  evaluators.html  ffmpeg.py  local.py  model_wrappers.html  monkey.py  patch.py  registry.html  template.py  tools.py  version.py
compressai_vision/cli/: __init__.py  app.py  auto.py  base_.py  clean.py  convert_mpeg_to_oiv6.py  convert_to_mpeg_vcm.py  convert_video.py  deregister.py  detectron2_eval.py  download.py  dummy.py  import_custom.py  import_video.py  info.py  killmongo.py  list.py  list_.py  load_eval.py  main.py  make_thumbnails.py  metrics_eval.py  nokia_convert.py  plotter.py  register.py  show.py  tools.py  vtm.py
compressai_vision/codec/: __init__.py  anchors.py  base.py  bypass.py  cfp_codec.py  utils.py  vtm.py
compressai_vision/codecs/: __init__.py  anchors.py  base.py  cfp_codec.py  fctm.py  ffmpeg.py  sic_sfu2022.py  std_codecs.py  utils.py  vcmrs_descriptors.py
compressai_vision/config/: __init__.py  config.py  env.py  outputs.py
compressai_vision/conversion/: README.md  __init__.py  detectron2.py  mpeg_vcm.py  nokia.py  sfu_hw_objects_v1.py  tvd_object_tracking_v1.py
compressai_vision/data/: README.md  encoder_intra_vtm_1.cfg  manual.txt  manual_legacy_1.txt  plotter.txt
compressai_vision/datasets/: __init__.py  image.py  utils.py
conversion/: index.html
cross_checking_scripts/: README.md  mpeg_cfp_hieve.sh  mpeg_cfp_oiv6_detection.sh  mpeg_cfp_oiv6_segmentation.sh  mpeg_cfp_sfu.sh  mpeg_cfp_tvd.sh  run_oiv6_det.sh  run_oiv6_seg.sh  run_sfu.sh
docker/: Dockerfile  Dockerfile.1  Dockerfile.2  make_image.bash  run_image.bash  run_image_dev.bash
docs/: .gitignore  detectron2_test.json  index.html  requirements.txt
evaluation/: index.html
evaluators/: index.html
examples/: default_vision_performances.sh  mpeg_cfp_oiv6.sh  mpeg_cfp_sfu.sh
gridfiles/: prepare_cfp_response.sh  run_hieve.yaml  run_oiv6.yaml  run_sfu.yaml  run_sfu_a.yaml  run_sfu_b.yaml  run_sfu_cd.yaml  run_tvd.yaml  tar_bitstreams.sh
model_wrappers/: index.html
pipelines/: index.html
scripts/: 0001-compatible-with-numpy-1.24.1.patch  0001-detectron2-fpn-bottom-up-separate.patch  0001-interface-with-compressai-vision.patch  README.md  change_fo_version.bash  cleanpy.bash  default_vision_performances.sh  env_cuda.sh  get_models.sh  insert_venv.py  install.bash  install.sh  install_1.bash  install_models.sh  install_uv.sh  mpeg_cfp_hieve.sh  mpeg_cfp_oiv6.sh  mpeg_cfp_sfu.sh  mpeg_cfp_tvd.sh  prepare_sfu_data.py
tutorials/: cli_reference.html  cli_tutorial_1.html  cli_tutorial_1_nb.html  cli_tutorial_2.html  cli_tutorial_2_nb.html  cli_tutorial_3.html  cli_tutorial_3_nb.html  cli_tutorial_4.html  cli_tutorial_4_nb.html  cli_tutorial_5.html  cli_tutorial_5_nb.html  cli_tutorial_6.html  cli_tutorial_6_nb.html  cli_tutorial_7.html  cli_tutorial_7_nb.html  convert.html  convert_nb.html  detectron2.html  detectron2_nb.html  download.html  download_nb.html  encdec.html  encdec_nb.html  evaluate.html  evaluate_nb.html  fiftyone.html  fiftyone_nb.html  index.html
utils/: calaulate_avg_kmac.py  compute_overall_kmac_per_px.py  compute_overall_mAP.py  compute_overall_map.py  compute_overall_mot.py  cubic_polynomial.py  curve_fitting.py  fcm_cttc_output_gen.py  gen_mpeg_cttc_csv.py  mpeg_template_format.py  utils.py
(+619 files in other folders)
